--- a/package.json
+++ b/package.json
@@ -17,10 +17,11 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-paper": "^4.9.2",
-    "react-native-reanimated": "^2.2.0",
+    "react-native-reanimated": "^1.13.1",
     "react-native-screens": "^3.3.0",
     "react-native-web": "~0.13.12",
     "react-navigation": "^4.4.4",
+    "react-navigation-drawer": "^2.7.1",
     "react-navigation-header-buttons": "^6.3.1",
     "react-navigation-material-bottom-tabs": "^2.3.4",
     "react-navigation-stack": "^2.10.4",
